--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -1,5 +1,8 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a href="{{url_for('index')}}" >
+        <img src="/static/assets/GOAT.jpg" width="50rem" height="50rem" class="center" alt="">
+    </a>
     <a class="navbar-brand" href="https://csp.nighthawkcodingsociety.com/">{{basename}}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
