--- a/templates/layouts/index.html
+++ b/templates/layouts/index.html
@@ -1,9 +1,244 @@
-<!-- Extending the project layout, as this file will do minor customizations -->
 {% extends "layouts/base.html" %}
 {% block head %}
+<meta charset="utf-8">
+{#<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">#}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<title>Koinonia</title>
+<style>
+    button{
+        position:relative;
+    }
+    body, html {
+    height: 100%;
+    margin: 0;
+    font: 400 15px/1.8 "Lato", sans-serif;
+    color: #777;
+    }
 
-<title> Project POO</title>
+    .bgimg-1, .bgimg-2, .bgimg-3 {
+    position: relative;
+    opacity: 0.65;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    }
+    .bgimg-1 {
+    background-image: url({{ url_for('static', filename='assets/capison.jpg') }});
+    min-height: 100%;
+    }
+
+    .bgimg-2 {
+    background-image: url({{ url_for('static', filename='assets/doyouhavegamesonyourphone.jpg') }});
+    min-height: 700px;
+    }
+
+    .bgimg-3 {
+    background-image: url({{ url_for('static', filename='assets/chin.jpg') }});
+    min-height: 400px;
+    }
+
+    h3 {
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    font: 20px "Lato", sans-serif;
+    color: #111;
+    }
+
+    /* Turn off parallax scrolling for tablets and phones */
+    @media only screen and (max-device-width: 1024px) {
+    .bgimg-1, .bgimg-2, .bgimg-3 {
+    background-attachment: scroll;
+    }
+    }
+    .header {
+
+        background-color: #f1f1f1;
+
+        padding: 20px;
+
+        text-align: center;
+
+    }
+    h1 {
+        display: inline-block;
+        padding-top: 450px;
+        overflow: hidden;
+        white-space: nowrap;
+        animation: koinonia 4s linear 0s;
+    }
+
+    @keyframes koinonia {
+        from {
+            width: 200px;
+        }
+        to {
+            width: 1100px;
+        }
+    }
+    .carousel img {
+        max-height: 500px;
+        max-width: 800px !important;
+        margin: 0 auto;
+    }
+    .carousel slide{
+        padding: 0;
+        margin: 0;
+    }
+    .carousel-item {
+        background-size: cover;
+        background-position: 50% 50%;
+        width: 100%;
+        height: 100%;
+    }
+
+    .item img {
+        visibility: hidden;
+    }
+    hr {
+        height:2px;
+        border-width:0;
+        color:gray;
+        background-color:gray;
+        width: 75%
+    }
+</style>
 {% endblock %}
 
 {% block body %}
+    <body>
+
+    </div>
+    <div class="bgimg-1" style="position:relative">
+        <div class="flex-parent hero-desktop">
+            <div class="flex-child _40 hero-padding">
+                <div class="child-div">
+                    <h1 style="padding-left:300px;font-size:100px">
+                        Project Koinonia
+                    </h1>
+            </div>
+            </div>
+        </div>
+        <h1 style="visibility:hidden;padding-left:300px;font-size:100px">
+            Placeholder Element
+        </h1>
+        <div>
+            <center>
+                <button type="button" class="btn btn-outline-primary" onclick="document.location={{url_for('ourstatement')}}">Our Statement</button>
+                <button type="button" class="btn btn-outline-primary" onclick="document.location='GetInvolved'">Get Involved</button>
+            </center>
+        </div>
+        </div>
+    <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
+        <p>Since its conception, Koinonia has been dedicated to preservation and giving back to the community.</p>
+    </div>
+    <div class="bgimg-2">
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block" height="700px" src="/static/assets/pant.jpg" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block" height="700px" src="/static/assets/kiss.jpg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block" height="700px" src="/static/assets/fivehead.jpg" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block" height="700px" src="/static/assets/sniff.jpg" alt="Fourth slide">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev" style="background-color: rgba(0, 0, 0, 0.50)">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next" style="background-color: rgba(0, 0, 0, 0.50)">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
+    <div style="position:relative;">
+        <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
+            <p>We are based in San Diego, California. Feel free to contact us!</p>
+        </div>
+        </div>
+    <div class="bgimg-3">
+    </div>
+    <div style="position:relative;">
+    <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+    </div>
+    </div>
+    </body>
+<div class="bgimg-1"></div>
+{#        <hr>#}
+        <footer class="bg-white">
+            <div class="container py-5">
+                <div class="row py-4">
+{#                    <div class="col-lg-4 col-md-6 mb-4 mb-lg-0"><img src="img/logo.png" alt="" width="180" class="mb-3">#}
+{#                        <p class="font-italic text-muted"></p>#}
+{#                        <ul class="list-inline mt-4">#}
+{#                            <li class="list-inline-item"><a href="#" target="_blank" title="twitter"><i class="fa fa-twitter"></i></a></li>#}
+{#                            <li class="list-inline-item"><a href="#" target="_blank" title="facebook"><i class="fa fa-facebook"></i></a></li>#}
+{#                            <li class="list-inline-item"><a href="#" target="_blank" title="instagram"><i class="fa fa-instagram"></i></a></li>#}
+{#                            <li class="list-inline-item"><a href="#" target="_blank" title="pinterest"><i class="fa fa-pinterest"></i></a></li>#}
+{#                            <li class="list-inline-item"><a href="#" target="_blank" title="vimeo"><i class="fa fa-vimeo"></i></a></li>#}
+{#                        </ul>#}
+{#                    </div>#}
+                    <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
+                        <h6 class="text-uppercase font-weight-bold mb-4">About</h6>
+                        <ul class="list-unstyled mb-0">
+                            <li class="mb-2"><a href="#" class="text-muted">About Us</a></li>
+                            <li class="mb-2"><a href="#" class="text-muted">Founders</a></li>
+                            <li class="mb-2"><a href="#" class="text-muted">Partners</a></li>
+                            <li class="mb-2"><a href="#" class="text-muted">Get Involved</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-4 col-md-6 mb-lg-0">
+                        <h6 class="text-uppercase font-weight-bold mb-4">Contact</h6>
+                        <ul class="list-unstyled mb-0">
+                            <li class="mb-2"><a href="#" class="text-muted">Login</a></li>
+                            <li class="mb-2"><a href="#" class="text-muted">Register</a></li>
+                            <li class="mb-2"><a href="#" class="text-muted">Contact Information</a></li>
+{#                            <li class="mb-2"><a href="#" class="text-muted">Our Products</a></li>#}
+                        </ul>
+                    </div>
+                    <div class="col-lg-4 col-md-6 mb-lg-0">
+                        <h6 class="text-uppercase font-weight-bold mb-4">Placeholder</h6>
+                        <ul class="list-unstyled mb-0">
+                            <li class="mb-2"><a href="#" class="text-muted">Lorem</a></li>
+                            <li class="mb-2"><a href="#" class="text-muted">Ipsum</a></li>
+                            <li class="mb-2"><a href="#" class="text-muted">Lorem Ipsum</a></li>
+                            <li class="mb-2"><a href="#" class="text-muted">Ipsum, Lorem</a></li>
+                        </ul>
+                    </div>
+{#                    <div class="col-lg-4 col-md-6 mb-lg-0">#}
+{#                        <h6 class="text-uppercase font-weight-bold mb-4">Newsletter</h6>#}
+{#                        <p class="text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At itaque temporibus.</p>#}
+{#                        <div class="p-1 rounded border">#}
+{#                            <div class="input-group">#}
+{#                                <input type="email" placeholder="Enter your email address" aria-describedby="button-addon1" class="form-control border-0 shadow-0">#}
+{#                                <div class="input-group-append">#}
+{#                                    <button id="button-addon1" type="submit" class="btn btn-link"><i class="fa fa-paper-plane"></i></button>#}
+{#                                </div>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+                </div>
+            </div>
+    </div>
+    <div class="bg-light py-4">
+        <div class="container text-center">
+            <p class="text-muted mb-0 py-2">Junseo Lim is a beast</p>
+        </div>
+    </div>
+    </footer>
 {% endblock %}
