--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -1,7 +1,18 @@
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a href="{{url_for('index')}}" >
+{# implement google translate #}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<style>
+    .sticky {
+        position: -webkit-sticky;
+        position: sticky;
+        z-index:999;
+        top: 0;
+    }
+</style>
+<nav class="navbar navbar-expand-lg navbar-light bg-light sticky">
+    <div class="container-fluid">
+    <a class="navbar-brand" href="{{url_for('index')}}">
         <img src="/static/assets/GOAT.jpg" width="50rem" height="50rem" class="center" alt="">
+        Koinonia
     </a>
     <a class="navbar-brand" href="https://csp.nighthawkcodingsociety.com/">{{basename}}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,10 +21,15 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
             <!-- url_for is a Jinja2 pre-processor that finds route from function name (def) -->
-            <a class="nav-link" href={{ url_for('index') }}>Portfolio</a>
-            <a class="nav-link" href={{ url_for('placeholder') }}>Placeholder</a>
+{#            <a class="nav-link" href={{ url_for('index') }}></a>#}
+            <a class="nav-link" href="/ourstatement/">Our Statement</a>
             <!-- stub is shown using the name of the route -->
-            <a class="nav-link" href="/stub">Stub</a>
+            <a class="nav-link" href="/getinvolved/">Get Involved</a>
         </div>
     </div>
+        <form class="form-inline">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+        </form>
+</div>
 </nav>
