font color change for deployment presentation

--- a/templates/layouts/index.html
+++ b/templates/layouts/index.html
@@ -104,7 +104,7 @@
         <div class="flex-parent hero-desktop">
             <div class="flex-child _40 hero-padding">
                 <div class="child-div">
-                    <h1 style="padding-left:300px;font-size:100px">
+                    <h1 style="color:black;padding-left:300px;font-size:95px">
                         Project Koinonia
                     </h1>
             </div>
