overflow fix for deployment presentation

--- a/templates/layouts/index.html
+++ b/templates/layouts/index.html
@@ -54,7 +54,7 @@
     h1 {
         display: inline-block;
         padding-top: 450px;
-        overflow: hidden;
+        {#overflow: hidden;#}
         white-space: nowrap;
         animation: koinonia 4s linear 0s;
     }
