--- a/templates/layouts/index.html
+++ b/templates/layouts/index.html
@@ -39,12 +39,11 @@
     min-height: 400px;
     }
 
-    h3 {
-    letter-spacing: 3px;
-    text-transform: uppercase;
-    font: 20px "Lato", sans-serif;
-    color: #111;
-    }
+    {#h3 {#}
+    {#letter-spacing: 3px;#}
+    {#text-transform: uppercase;#}
+    {#font: 20px "Lato", sans-serif;#}
+    {#color: #111;#}
 
     {#/* Turn off parallax scrolling for tablets and phones */#}
     {#@media only screen and (max-device-width: 1024px) {#}
@@ -92,6 +91,95 @@
         color:gray;
         background-color:gray;
         width: 75%
+    }
+    .footer-dark {
+        padding:50px 0;
+        color:#f0f9ff;
+        background-color:#282d32;
+    }
+
+    .footer-dark h3 {
+        margin-top:0;
+        margin-bottom:12px;
+        font-weight:bold;
+        font-size:16px;
+    }
+
+    .footer-dark ul {
+        padding:0;
+        list-style:none;
+        line-height:1.6;
+        font-size:14px;
+        margin-bottom:0;
+    }
+
+    .footer-dark ul a {
+        color:inherit;
+        text-decoration:none;
+        opacity:0.6;
+    }
+
+    .footer-dark ul a:hover {
+        opacity:0.8;
+    }
+
+    @media (max-width:767px) {
+        .footer-dark .item:not(.social) {
+            text-align:center;
+            padding-bottom:20px;
+        }
+    }
+
+    .footer-dark .item.text {
+        margin-bottom:36px;
+    }
+
+    @media (max-width:767px) {
+        .footer-dark .item.text {
+            margin-bottom:0;
+        }
+    }
+
+    .footer-dark .item.text p {
+        opacity:0.6;
+        margin-bottom:0;
+    }
+
+    .footer-dark .item.social {
+        text-align:center;
+    }
+
+    @media (max-width:991px) {
+        .footer-dark .item.social {
+            text-align:center;
+            margin-top:20px;
+        }
+    }
+
+    .footer-dark .item.social > a {
+        font-size:20px;
+        width:36px;
+        height:36px;
+        line-height:36px;
+        display:inline-block;
+        text-align:center;
+        border-radius:50%;
+        box-shadow:0 0 0 1px rgba(255,255,255,0.4);
+        margin:0 8px;
+        color:#fff;
+        opacity:0.75;
+    }
+
+    .footer-dark .item.social > a:hover {
+        opacity:0.9;
+    }
+
+    .footer-dark .copyright {
+        text-align:center;
+        padding-top:24px;
+        opacity:0.3;
+        font-size:13px;
+        margin-bottom:0;
     }
 </style>
 {% endblock %}
@@ -169,10 +257,41 @@
     </div>
     </body>
 <div class="bgimg-1"></div>
+    <div class="footer-dark">
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6 col-md-3 item">
+                        <h3>About</h3>
+                        <ul>
+                            <li><a href="#">About Koinonia</a></li>
+                            <li><a href="#">Get Involved</a></li>
+                            <li><a href="#">Partners</a></li>
+                            <li><a href="#">Founders</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-6 col-md-3 item">
+                        <h3>Contact</h3>
+                        <ul>
+                            <li><a href="#">Login</a></li>
+                            <li><a href="#">Register</a></li>
+                            <li><a href="#">Contact Information</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6 item text">
+                        <h3>Koinonia</h3>
+                        <p>Koinonia has and always will be for the poeple. Feel free to contact us for anything!</p>
+                    </div>
+                    <div class="col item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a></div>
+                </div>
+                <p class="copyright">Koinonia</p>
+            </div>
+        </footer>
+    </div>
 {#        <hr>#}
-        <footer class="bg-white">
-            <div class="container py-5">
-                <div class="row py-4">
+{#        <footer class="bg-white">#}
+{#            <div class="container py-5">#}
+{#                <div class="row py-4">#}
 {#                    <div class="col-lg-4 col-md-6 mb-4 mb-lg-0"><img src="img/logo.png" alt="" width="180" class="mb-3">#}
 {#                        <p class="font-italic text-muted"></p>#}
 {#                        <ul class="list-inline mt-4">#}
@@ -183,33 +302,33 @@
 {#                            <li class="list-inline-item"><a href="#" target="_blank" title="vimeo"><i class="fa fa-vimeo"></i></a></li>#}
 {#                        </ul>#}
 {#                    </div>#}
-                    <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
-                        <h6 class="text-uppercase font-weight-bold mb-4">About</h6>
-                        <ul class="list-unstyled mb-0">
-                            <li class="mb-2"><a href="#" class="text-muted">About Us</a></li>
-                            <li class="mb-2"><a href="#" class="text-muted">Founders</a></li>
-                            <li class="mb-2"><a href="#" class="text-muted">Partners</a></li>
-                            <li class="mb-2"><a href="#" class="text-muted">Get Involved</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-4 col-md-6 mb-lg-0">
-                        <h6 class="text-uppercase font-weight-bold mb-4">Contact</h6>
-                        <ul class="list-unstyled mb-0">
-                            <li class="mb-2"><a href="#" class="text-muted">Login</a></li>
-                            <li class="mb-2"><a href="#" class="text-muted">Register</a></li>
-                            <li class="mb-2"><a href="#" class="text-muted">Contact Information</a></li>
+{#                    <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">#}
+{#                        <h6 class="text-uppercase font-weight-bold mb-4">About</h6>#}
+{#                        <ul class="list-unstyled mb-0">#}
+{#                            <li class="mb-2"><a href="#" class="text-muted">About Us</a></li>#}
+{#                            <li class="mb-2"><a href="#" class="text-muted">Founders</a></li>#}
+{#                            <li class="mb-2"><a href="#" class="text-muted">Partners</a></li>#}
+{#                            <li class="mb-2"><a href="#" class="text-muted">Get Involved</a></li>#}
+{#                        </ul>#}
+{#                    </div>#}
+{#                    <div class="col-lg-4 col-md-6 mb-lg-0">#}
+{#                        <h6 class="text-uppercase font-weight-bold mb-4">Contact</h6>#}
+{#                        <ul class="list-unstyled mb-0">#}
+{#                            <li class="mb-2"><a href="#" class="text-muted">Login</a></li>#}
+{#                            <li class="mb-2"><a href="#" class="text-muted">Register</a></li>#}
+{#                            <li class="mb-2"><a href="#" class="text-muted">Contact Information</a></li>#}
 {#                            <li class="mb-2"><a href="#" class="text-muted">Our Products</a></li>#}
-                        </ul>
-                    </div>
-                    <div class="col-lg-4 col-md-6 mb-lg-0">
-                        <h6 class="text-uppercase font-weight-bold mb-4">Placeholder</h6>
-                        <ul class="list-unstyled mb-0">
-                            <li class="mb-2"><a href="#" class="text-muted">Lorem</a></li>
-                            <li class="mb-2"><a href="#" class="text-muted">Ipsum</a></li>
-                            <li class="mb-2"><a href="#" class="text-muted">Lorem Ipsum</a></li>
-                            <li class="mb-2"><a href="#" class="text-muted">Ipsum, Lorem</a></li>
-                        </ul>
-                    </div>
+{#                        </ul>#}
+{#                    </div>#}
+{#                    <div class="col-lg-4 col-md-6 mb-lg-0">#}
+{#                        <h6 class="text-uppercase font-weight-bold mb-4">Placeholder</h6>#}
+{#                        <ul class="list-unstyled mb-0">#}
+{#                            <li class="mb-2"><a href="#" class="text-muted">Lorem</a></li>#}
+{#                            <li class="mb-2"><a href="#" class="text-muted">Ipsum</a></li>#}
+{#                            <li class="mb-2"><a href="#" class="text-muted">Lorem Ipsum</a></li>#}
+{#                            <li class="mb-2"><a href="#" class="text-muted">Ipsum, Lorem</a></li>#}
+{#                        </ul>#}
+{#                    </div>#}
 {#                    <div class="col-lg-4 col-md-6 mb-lg-0">#}
 {#                        <h6 class="text-uppercase font-weight-bold mb-4">Newsletter</h6>#}
 {#                        <p class="text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At itaque temporibus.</p>#}
@@ -222,13 +341,13 @@
 {#                            </div>#}
 {#                        </div>#}
 {#                    </div>#}
-                </div>
-            </div>
-    </div>
-    <div class="bg-light py-4">
-        <div class="container text-center">
-            <p class="text-muted mb-0 py-2">Junseo Lim is a beast</p>
-        </div>
-    </div>
-    </footer>
+{#                </div>#}
+{#            </div>#}
+{#    </div>#}
+{#    <div class="bg-light py-4">#}
+{#        <div class="container text-center">#}
+{#            <p class="text-muted mb-0 py-2">Junseo Lim is a beast</p>#}
+{#        </div>#}
+{#    </div>#}
+{#    </footer>#}
 {% endblock %}
