--- a/templates/layouts/index.html
+++ b/templates/layouts/index.html
@@ -3,190 +3,29 @@
 <meta charset="utf-8">
 {#<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">#}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<title>Koinonia</title>
-<style>
-    button{
-        position:relative;
-    }
-    body, html {
-    height: 100%;
-    margin: 0;
-    font: 400 15px/1.8 "Lato", sans-serif;
-    color: #777;
-    }
-
-    .bgimg-1, .bgimg-2, .bgimg-3 {
-    position: relative;
-    opacity: 0.65;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-
-    }
-    .bgimg-1 {
-    background-image: url({{ url_for('static', filename='assets/capison.jpg') }});
-    min-height: 100%;
-    }
-
-    .bgimg-2 {
-    background-image: url({{ url_for('static', filename='assets/doyouhavegamesonyourphone.jpg') }});
-    min-height: 700px;
-    }
-
-    .bgimg-3 {
-    background-image: url({{ url_for('static', filename='assets/chin.jpg') }});
-    min-height: 400px;
-    }
-
-    {#h3 {#}
-    {#letter-spacing: 3px;#}
-    {#text-transform: uppercase;#}
-    {#font: 20px "Lato", sans-serif;#}
-    {#color: #111;#}
-
-    {#/* Turn off parallax scrolling for tablets and phones */#}
-    {#@media only screen and (max-device-width: 1024px) {#}
-    {#.bgimg-1, .bgimg-2, .bgimg-3 {#}
-    {#background-attachment: scroll;#}
-
-    h1 {
-        display: inline-block;
-        padding-top: 450px;
-        overflow: hidden;
-        white-space: nowrap;
-        animation: koinonia 4s linear 0s;
-    }
-
-    @keyframes koinonia {
-        from {
-            width: 200px;
+<link rel="stylesheet" href="{{ url_for('static', filename='styles/index.css') }}">
+    <title>Koinonia</title>
+    <style>
+        .bgimg-1 {
+            background-image: url({{ url_for('static', filename='assets/capison.jpg') }});
+            min-height: 100%;
         }
-        to {
-            width: 1100px;
+
+        .bgimg-2 {
+            background-image: url({{ url_for('static', filename='assets/doyouhavegamesonyourphone.jpg') }});
+            min-height: 700px;
         }
-    }
-    .carousel img {
-        max-height: 500px;
-        max-width: 800px !important;
-        margin: 0 auto;
-    }
-    .carousel slide{
-        padding: 0;
-        margin: 0;
-    }
-    .carousel-item {
-        background-size: cover;
-        background-position: 50% 50%;
-        width: 100%;
-        height: 100%;
-    }
 
-    .item img {
-        visibility: hidden;
-    }
-    hr {
-        height:2px;
-        border-width:0;
-        color:gray;
-        background-color:gray;
-        width: 75%
-    }
-    .footer-dark {
-        padding:50px 0;
-        color:#f0f9ff;
-        background-color:#282d32;
-    }
-
-    .footer-dark h3 {
-        margin-top:0;
-        margin-bottom:12px;
-        font-weight:bold;
-        font-size:16px;
-    }
-
-    .footer-dark ul {
-        padding:0;
-        list-style:none;
-        line-height:1.6;
-        font-size:14px;
-        margin-bottom:0;
-    }
-
-    .footer-dark ul a {
-        color:inherit;
-        text-decoration:none;
-        opacity:0.6;
-    }
-
-    .footer-dark ul a:hover {
-        opacity:0.8;
-    }
-
-    @media (max-width:767px) {
-        .footer-dark .item:not(.social) {
-            text-align:center;
-            padding-bottom:20px;
+        .bgimg-3 {
+            background-image: url({{ url_for('static', filename='assets/chin.jpg') }});
+            min-height: 400px;
         }
-    }
 
-    .footer-dark .item.text {
-        margin-bottom:36px;
-    }
-
-    @media (max-width:767px) {
-        .footer-dark .item.text {
-            margin-bottom:0;
-        }
-    }
-
-    .footer-dark .item.text p {
-        opacity:0.6;
-        margin-bottom:0;
-    }
-
-    .footer-dark .item.social {
-        text-align:center;
-    }
-
-    @media (max-width:991px) {
-        .footer-dark .item.social {
-            text-align:center;
-            margin-top:20px;
-        }
-    }
-
-    .footer-dark .item.social > a {
-        font-size:20px;
-        width:36px;
-        height:36px;
-        line-height:36px;
-        display:inline-block;
-        text-align:center;
-        border-radius:50%;
-        box-shadow:0 0 0 1px rgba(255,255,255,0.4);
-        margin:0 8px;
-        color:#fff;
-        opacity:0.75;
-    }
-
-    .footer-dark .item.social > a:hover {
-        opacity:0.9;
-    }
-
-    .footer-dark .copyright {
-        text-align:center;
-        padding-top:24px;
-        opacity:0.3;
-        font-size:13px;
-        margin-bottom:0;
-    }
-</style>
+    </style>
 {% endblock %}
 
 {% block body %}
     <body>
-
     </div>
     <div class="bgimg-1" style="position:relative">
         <div class="flex-parent hero-desktop">
@@ -279,8 +118,8 @@
                         </ul>
                     </div>
                     <div class="col-md-6 item text">
-                        <h3>Koinonia</h3>
-                        <p>Koinonia has and always will be for the poeple. Feel free to contact us for anything!</p>
+                        <h3>Project Koinonia</h3>
+                        <p>Koinonia has and always will be for the people. Feel free to contact us for anything!</p>
                     </div>
                     <div class="col item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a></div>
                 </div>
