--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -20,13 +20,39 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    About
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="">About Koinonia</a>
+                    <a class="dropdown-item" href="">Partners</a>
+                    <a class="dropdown-item" href="">Founders</a>
+                    <a class="dropdown-item" href="">Lucas</a>
+                    <a class="dropdown-item" href="">Ŕithwikh</a>
+                </div>
+            </li>
             <!-- url_for is a Jinja2 pre-processor that finds route from function name (def) -->
 {#            <a class="nav-link" href={{ url_for('index') }}></a>#}
             <a class="nav-link" href="{{ url_for('aboutkoinonia') }}">About Koinonia</a>
+            <a class="nav-link" href="{{ url_for('register') }}">Register</a>
             <!-- stub is shown using the name of the route -->
             <a class="nav-link" href="{{ url_for('getinvolved') }}">Get Involved</a>
         </div>
     </div>
+        <div id="google_translate_element"></div>
+        <script type="text/javascript">
+            function googleTranslateElementInit() {
+                new google.translate.TranslateElement(
+                    {pageLanguage: 'en'},
+                    'google_translate_element'
+                );
+            }
+        </script>
+
+        <script type="text/javascript" src=
+                "https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+        </script>
         <form class="form-inline">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
