--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -10,18 +10,19 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/assets/scss">
     <link rel="icon" href="/static/assets/GOAT.jpg">
-    <title>| Koinonia |</title>
+    <title>| Project ELIMIN8 |</title>
     <link rel="shortcut icon" href="/static/assets/GOAT.jpg">
 
 
-    <style>
-        body {font-family: Baskerville;}
-    </style>
-
     {%block head %}
-
+<style>
+body {
+    color: #000000
+}
+</style>
     {%endblock%}
 </head>
+
 
 <body>
 {% include "layouts/navbar.html" %}
@@ -30,5 +31,8 @@
 
 {% endblock %}
 
+{% block footer %}
+{% include "layouts/footer.html" %}
+{% endblock %}
 </body>
 </html>
