--- a/templates/layouts/footer.html
+++ b/templates/layouts/footer.html
@@ -7,7 +7,7 @@
                 <div class="col-sm-6 col-md-3 item">
                     <h3>About</h3>
                     <ul>
-                        <li><a href="{{ url_for('aboutelimin8') }}">About ELIMIN8</a></li>
+                        <li><a href="{{ url_for('aboutelimin8') }}">About Project ELIMIN8</a></li>
                         <li><a href="{{ url_for('getinvolved') }}">Get Involved</a></li>
                         <li><a href="{{ url_for('partners') }}">Partners</a></li>
                         <li><a href="{{ url_for('founders') }}">Founders</a></li>
