--- a/templates/layouts/footer.html
+++ b/templates/layouts/footer.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='styles/footer.css') }}">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<div class="footer-dark" style="margin-top: auto;">
+<div class="footer-white" style="margin-top: auto;">
     <footer>
         <div class="container">
             <div class="row">
@@ -25,7 +26,10 @@
                     <h3>Project ELIMIN8</h3>
                     <h10>Project ELIMIN8 has and always will be for the people. Feel free to contact us for anything!</h10>
                 </div>
-                <div class="col item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a></div>
+                <div class="col item social"><a href="#"><i class="fa fa-instagram"></i></a>
+{#                    <a href="#"><i class="icon ion-social-twitter"></i></a>#}
+                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://github.com/peacekeeper6/CastSD-Branch-Org"><i class="fa fa-github"></i></a></div>
             </div>
             <p class="copyright">Project ELIMIN8</p>
         </div>
