--- a/static/styles/footer.css
+++ b/static/styles/footer.css
@@ -76,20 +76,20 @@ h7 {
 /*    background-color:gray;*/
 /*    width: 75%*/
 /*}*/
-.footer-dark {
+.footer-white {
     padding:50px 0;
-    color:#f0f9ff;
-    background-color:#282d32;
+    color:#282d32;
+    background-color:#ffffff;
 }
 
-.footer-dark h3 {
+.footer-white h3 {
     margin-top:0;
     margin-bottom:12px;
     font-weight:bold;
     font-size:16px;
 }
 
-.footer-dark ul {
+.footer-white ul {
     padding:0;
     list-style:none;
     line-height:1.6;
@@ -97,50 +97,50 @@ h7 {
     margin-bottom:0;
 }
 
-.footer-dark ul a {
+.footer-white ul a {
     color:inherit;
     text-decoration:none;
     opacity:0.6;
 }
 
-.footer-dark ul a:hover {
+.footer-white ul a:hover {
     opacity:0.8;
 }
 
 @media (max-width:767px) {
-    .footer-dark .item:not(.social) {
+    .footer-white .item:not(.social) {
         text-align:center;
         padding-bottom:20px;
     }
 }
 
-.footer-dark .item.text {
+.footer-white .item.text {
     margin-bottom:36px;
 }
 
 @media (max-width:767px) {
-    .footer-dark .item.text {
+    .footer-white .item.text {
         margin-bottom:0;
     }
 }
 
-.footer-dark .item.text p {
+.footer-white .item.text p {
     opacity:0.6;
     margin-bottom:0;
 }
 
-.footer-dark .item.social {
+.footer-white .item.social {
     text-align:center;
 }
 
 @media (max-width:991px) {
-    .footer-dark .item.social {
+    .footer-white .item.social {
         text-align:center;
         margin-top:20px;
     }
 }
 
-.footer-dark .item.social > a {
+.footer-white .item.social > a {
     font-size:20px;
     width:36px;
     height:36px;
@@ -150,15 +150,20 @@ h7 {
     border-radius:50%;
     box-shadow:0 0 0 1px rgba(255,255,255,0.4);
     margin:0 8px;
-    color:#fff;
+    color:#000000;
+    border-right: 2px solid gray;
+    border-left: 2px solid gray;
+    border-bottom: 2px solid gray;
+    border-top: 2px solid gray;
+    background-color:#ffffff;
     opacity:0.75;
 }
 
-.footer-dark .item.social > a:hover {
+.footer-white .item.social > a:hover {
     opacity:0.9;
 }
 
-.footer-dark .copyright {
+.footer-white .copyright {
     text-align:center;
     padding-top:24px;
     opacity:0.3;
