logo fixes and misc

--- a/templates/layouts/index.html
+++ b/templates/layouts/index.html
@@ -32,24 +32,17 @@
         <div class="flex-parent hero-desktop">
             <div class="flex-child _40 hero-padding">
                 <div class="child-div">
-                    <h7 style="color:black;padding-left:300px;font-size:95px">
+                    <h7 style="color:white;padding-left:300px;font-size:95px">
                         Project ELIMIN8
                     </h7>
                 </div>
             </div>
-            <button type="button" class="btn btn-outline-primary" onclick="document.location='login'">Login</button>
         </div>
         <h1 style="visibility:hidden;padding-left:300px;font-size:100px">
             Placeholder Element
         </h1>
-        <div>
-            <center>
-                <button type="button" class="btn btn-outline-primary" onclick="document.location='aboutelimin8'">About Project ELIMIN8</button>
-                <button type="button" class="btn btn-outline-primary" onclick="document.location='getinvolved'">Get Involved</button>
-            </center>
         </div>
-        </div>
-    <div style="color: white;background-color:#262424;text-align:center;padding:50px 80px;text-align: justify;">
+    <div style="color: #000000;background-color:#ffffff;text-align:center;padding:50px 80px;text-align: justify;">
         <p>Since its conception, Project ELIMIN8 has been dedicated to preservation and giving back to the community.</p>
     </div>
     <div class="bgimg-2">
@@ -85,14 +78,14 @@
         </div>
     </div>
     <div style="position:relative;">
-        <div style="color: white;background-color:#262424;text-align:center;padding:50px 80px;text-align: justify;">
+        <div style="color:#000000;background-color:#ffffff;text-align:center;padding:50px 80px;text-align: justify;">
             <p>We are based in San Diego, California. Feel free to contact us!</p>
         </div>
         </div>
     <div class="bgimg-3">
     </div>
     <div style="position:relative;">
-    <div style="color: white;background-color:#262424;text-align:center;padding:50px 80px;text-align: justify;">
+    <div style="color: #000000;background-color:#ffffff;text-align:center;padding:50px 80px;text-align: justify;">
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
     </div>
     </div>
