--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -16,10 +16,10 @@
     {#    background-color: #000000;#}
     {#    color: #FFFFFF;#}
 </style>
-<nav class="navbar navbar-expand-lg navbar-light bg-light sticky">
+<nav class="navbar navbar-expand-lg navbar-light bg-white sticky">
     <div class="container-fluid">
     <a class="navbar-brand" href="{{url_for('index')}}">
-        <img src="/static/assets/SLUMPED.png" width="100rem" height="50rem" class="center" alt="">
+        <img src="/static/assets/elimin8!.jpg" width="100rem" height="50rem" class="center" alt="">
     </a>
     {#<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -89,10 +89,11 @@
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
         </form>
-        <div class="navbar-right">
-            <div class="navbar-nav">
-                <a class="nav-link" style="padding-left: 5px" href="{{ url_for('login') }}"><b>Login</b></a>
-</div>
+{#        <div class="navbar-right">#}
+{#            <div class="navbar-nav">#}
+{#                <a class="nav-link" style="padding-left: 5px" href="{{ url_for('login') }}"><b>Login</b></a>#}
+{#</div>#}
         </div>
+    </div>
 </nav>
 
