--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/assets/scss">
-    <link rel="icon" href="/static/assets/GOAT.jpg">
+    <link rel="icon" href="/static/assets/elimin8!.jpg">
     <title>| Project ELIMIN8 |</title>
-    <link rel="shortcut icon" href="/static/assets/GOAT.jpg">
+    <link rel="shortcut icon" href="/static/assets/elimin8!.jpg">
 
 
     {%block head %}
