founders info update

--- a/templates/aboutus/founders.html
+++ b/templates/aboutus/founders.html
@@ -101,8 +101,8 @@
             </div>
             <div class="flip-card-back">
                 <p>For anything:</p>
-                <p>858-750-5117</p>
-                <p>junlim954@gmail.com</p>
+                <p>858-914-6016</p>
+                <p>alexisonpan@gmail.com</p>
                 <hr>
                 <p>"I have no vision"</p>
             </div>
@@ -118,7 +118,7 @@
             </div>
             <div class="flip-card-back">
                 <p>For anything:</p>
-                <p>858</p>
+                <p>858-945-1445</p>
                 <p>awesomejustin04@gmail.com</p>
                 <hr>
                 <p>"I envision Project ELIMN8 to be a project that turns not only our community, but may other communiites into places where the problem of starvation exists only in the past."</p>
