alex email typo

--- a/templates/aboutus/founders.html
+++ b/templates/aboutus/founders.html
@@ -102,7 +102,7 @@
             <div class="flip-card-back">
                 <p>For anything:</p>
                 <p>858-914-6016</p>
-                <p>alexisonpan@gmail.com</p>
+                <p>alexison.pan@gmail.com</p>
                 <hr>
                 <p>"I have no vision"</p>
             </div>
