--- a/templates/register.html
+++ b/templates/register.html
@@ -43,6 +43,7 @@
 {% endblock %}
 {% block body %}
 <wrapper>
+<br>
 <form>
     <div class="form-row">
         <div class="form-group col-md-6">
@@ -83,7 +84,7 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h4 class="modal-title" id="myModalLabel">Why we ask for this information</h4>
+                            <h4 class="modal-title" style="color:#000000" id="myModalLabel">Why we ask for this information</h4>
                         </div>
                         <div class="modal-body">
                             We ask for this information in order to better understand the connections that need to be set up in your area. Through this, we are able to assess your options!
@@ -173,6 +174,7 @@
     </div>
     <button type="submit" class="btn btn-outline-primary">Sign Up</button>
 </form>
+<br>
 </wrapper>
 {% endblock %}
 </html>
