founders small changes

--- a/templates/aboutus/founders.html
+++ b/templates/aboutus/founders.html
@@ -87,11 +87,11 @@
             <img src="static/assets/fixedjuncaption.PNG" alt="Avatar" style="width:300px;height:300px">
         </div>
         <div class="flip-card-back">
-            <p>For anything:</p>
+            <p>Methods of contact:</p>
             <p>858-750-5117</p>
             <p>junlim954@gmail.com</p>
             <hr>
-            <p>"I envision Project ELIMIN8 as a way for us to use the tools that we have at our disposal to reduce wastage and starvation in areas in our community that cannot afford to support themselves at times."</p>
+            <p>"I envision Project ELIMIN8 as a way for us to use the tools that we have at our disposal to reduce wastage and starvation in areas in our community that cannot afford to support themselves."</p>
         </div>
     </div>
 </div>
@@ -101,7 +101,7 @@
                 <img src="static/assets/fixedalexcaption.PNG" alt="Avatar" style="width:300px;height:300px">
             </div>
             <div class="flip-card-back">
-                <p>For anything:</p>
+                <p>Methods of contact:</p>
                 <p>858-914-6016</p>
                 <p>alexison.pan@gmail.com</p>
                 <hr>
@@ -118,7 +118,7 @@
                 <img src="static/assets/captionjustin.PNG" alt="Avatar" style="width:300px;height:300px;">
             </div>
             <div class="flip-card-back">
-                <p>For anything:</p>
+                <p>Methods of contact:</p>
                 <p>858-945-1445</p>
                 <p>awesomejustin04@gmail.com</p>
                 <hr>
