founders small changes

--- a/templates/aboutus/founders.html
+++ b/templates/aboutus/founders.html
@@ -91,7 +91,7 @@
             <p>858-750-5117</p>
             <p>junlim954@gmail.com</p>
             <hr>
-            <p>"I envision Project ELIMIN8 as a way for us to use the tools that we have at our disposal to reduce wastage and starvation in areas in our community that cannot afford to support themselves."</p>
+            <p>"I envision Project ELIMIN8 as a way for us to use the tools that we have at our disposal to reduce wastage and starvation in areas of our community that cannot afford to support themselves."</p>
         </div>
     </div>
 </div>
