founders small changes i was tired ok

--- a/templates/aboutus/founders.html
+++ b/templates/aboutus/founders.html
@@ -122,7 +122,7 @@
                 <p>858-945-1445</p>
                 <p>awesomejustin04@gmail.com</p>
                 <hr>
-                <p>"I envision Project ELIMN8 to be a project that turns not only our community, but may other communiites into places where the problem of starvation exists only in the past."</p>
+                <p>"I envision Project ELIMN8 to be a project that turns not only our community, but many other communities into places where the problem of starvation exists only in the past."</p>
             </div>
         </div>
     </div>
