lorem ipsum - problem with founders

--- a/static/styles/founders.css
+++ b/static/styles/founders.css
@@ -55,7 +55,7 @@ container {
     align-items: center;
     align-content: center;
 }
-container1 {
+fieldset {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
