--- a/templates/aboutus/partners.html
+++ b/templates/aboutus/partners.html
@@ -53,11 +53,12 @@
 {#          font-size: 25px;#}
 {##}
 {#      }#}
-    </style>
 </head>
 {% endblock %}
 {% block body %}
-<body>
+<body style=" background-image: url({{ url_for('static', filename='assets/white-unsplash-9d0375d2.jpg') }});
+        background-repeat: no-repeat;
+        background-size:100% 100%;">
 <br>
     <h1>Our Partners</h1>
 <hr/>
@@ -104,7 +105,7 @@
     <div class="column">
         <div class="card">
             <center>
-                <img style="width:25rem;height:15rem" src="static/assets/unnamed.jpg">
+                <img style="width:25rem;height:15rem" src="static/assets/foundrychurch.jpg">
                 <a href="http://thefoundryescondido.com/">
                 <h9>Foundry Community Church</h9>
                 </a>
@@ -116,7 +117,7 @@
         <div class="card">
             <center>
                 <img style="width:25rem;height:15rem" src="static/assets/DMHTC_Listing_Gallery_Jimboslogo.jpg">
-                <h9>Jimbo's</h9>
+                <h9>Lorem</h9>
             </center>
         </div>
     </div>
@@ -125,7 +126,7 @@
         <div class="card">
             <center>
                 <img style="width:25rem;height:15rem" src="static/assets/producegood-logo.jpg">
-                <h9>ProduceGood</h9>
+                <h9>Ipsum</h9>
             </center>
         </div>
     </div>
@@ -135,7 +136,7 @@
 {#        <img style="border-radius: 5px 5px 0 0;width:25rem;" src="static/assets/DMHTC_Listing_Gallery_Jimboslogo.jpg" alt="Avatar">#}
 {#    </div>#}
 {#    <div class="card" style="width:25rem;height:10rem;justify-content:center">#}
-{#        <img style="border-radius: 5px 5px 0 0;width:25rem;" src="static/assets/cc.jpg" alt="Avatar">#}
+{#        <img style="border-radius: 5px 5px 0 0;width:25rem;" src="static/assets/leucadia.jpg" alt="Avatar">#}
 {#    </div>#}
 {##}
 {#    <div class="card">#}
