--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -17,7 +17,10 @@
     {%block head %}
 <style>
 body {
-    color: #000000
+    color: #000000;
+    background-image: url({{ url_for('static', filename='assets/white-unsplash-9d0375d2.jpg') }});
+    background-repeat: no-repeat;
+    background-size:100% 100%;
 }
 </style>
     {%endblock%}
