--- a/templates/layouts/index.html
+++ b/templates/layouts/index.html
@@ -6,19 +6,27 @@
     <title>Project ELIMIN8</title>
     <style>
         .bgimg-1 {
-            background-image: url({{ url_for('static', filename='assets/capison.jpg') }});
+            background-image: url({{ url_for('static', filename='assets/white-unsplash-9d0375d2.jpg') }});
+            background-repeat: no-repeat;
+            background-size:100% 100%;
             min-height: 100%;
         }
-
+        .bgimg-3 {
+            background-image: url({{ url_for('static', filename='assets/white-unsplash-9d0375d2.jpg') }});
+            background-repeat: no-repeat;
+            background-size:100% 100%;
+            min-height: 400px;
+        }
         .bgimg-2 {
-            background-image: url({{ url_for('static', filename='assets/doyouhavegamesonyourphone.jpg') }});
+            background-image: url({{ url_for('static', filename='assets/white-unsplash-9d0375d2.jpg') }});
+            background-repeat: no-repeat;
+            background-size:100% 100%;
             max-height: 700px;
         }
 
-        .bgimg-3 {
-            background-image: url({{ url_for('static', filename='assets/chin.jpg') }});
-            min-height: 400px;
-        }
+        {#.bgimg-3 {#}
+        {#    background-image: url({{ url_for('static', filename='assets/chin.jpg') }});#}
+        {#    min-height: 400px;#}
         body {
             color: #000000;
         }
@@ -32,7 +40,7 @@
         <div class="flex-parent hero-desktop">
             <div class="flex-child _40 hero-padding">
                 <div class="child-div">
-                    <h7 style="color:white;padding-left:300px;font-size:95px">
+                    <h7 style="color:black;padding-left:300px;font-size:95px">
                         Project ELIMIN8
                     </h7>
                 </div>
