--- a/templates/register.html
+++ b/templates/register.html
@@ -42,7 +42,7 @@
     </style>
 {% endblock %}
 {% block body %}
-<wrapper>
+    <body>
 <br>
 <form>
     <div class="form-row">
@@ -175,6 +175,6 @@
     <button type="submit" class="btn btn-outline-primary">Sign Up</button>
 </form>
 <br>
-</wrapper>
+    </body>
 {% endblock %}
 </html>
