--- a/templates/aboutus/founders.html
+++ b/templates/aboutus/founders.html
@@ -76,7 +76,9 @@
     </head>
 {% endblock %}
 {% block body %}
-<body>
+<body  style="background-image: url({{ url_for('static', filename='assets/white-unsplash-9d0375d2.jpg') }});
+       background-repeat: no-repeat;
+       background-size:100% 100%;">
 <br>
 <h1>Our Founders</h1>
 <br><br><br><br>
@@ -111,7 +113,7 @@
     </div>
 </container>
 <br><br><br><br>
-<container1>
+<fieldset>
     <div class="flip-card">
         <div class="flip-card-inner">
             <div class="flip-card-front">
@@ -126,7 +128,7 @@
             </div>
         </div>
     </div>
-</container1>
+</fieldset>
 <br><br><br><br>
 </body>
 {% endblock %}
