--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,9 +3,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Project ELIMIN8|Contact</title>
 </head>
 <body>
 Would you like to request a partnership, donate, or just talk to us? Feel free to refer to any of these contact methods below!
+
+To contact the individual founding members, refer to the
+<a href="{{ url_for('founders') }}">
+<p>Founders page</p>
+</a>
 </body>
 </html>
