--- a/templates/login.html
+++ b/templates/login.html
@@ -39,6 +39,8 @@
             {#align-items: center;#}
         }
         container {
+            align-items: center;
+            align-content: center;
             justify-content: center;
             width: 70%;
             height: 85%;
