--- a/Flaskenv/templates/layouts/index.html
+++ b/Flaskenv/templates/layouts/index.html
@@ -6,19 +6,19 @@
     <title>Project ELIMIN8</title>
     <style>
         .bgimg-1 {
-            background-image: url({{ url_for('static', filename='assets/white-unsplash-9d0375d2.jpg') }});
+            background-image: url({{ url_for('static', filename='assets/background.jpg') }});
             background-repeat: no-repeat;
             background-size:100% 100%;
             min-height: 100%;
         }
         .bgimg-3 {
-            background-image: url({{ url_for('static', filename='assets/white-unsplash-9d0375d2.jpg') }});
+            background-image: url({{ url_for('static', filename='assets/background.jpg') }});
             background-repeat: no-repeat;
             background-size:100% 100%;
             min-height: 400px;
         }
         .bgimg-2 {
-            background-image: url({{ url_for('static', filename='assets/white-unsplash-9d0375d2.jpg') }});
+            background-image: url({{ url_for('static', filename='assets/background.jpg') }});
             background-repeat: no-repeat;
             background-size:100% 100%;
             max-height: 700px;
